Added all the test cases. All tests passed successfully!